setting up routes and seeder for mongo db

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_ENV = development
 PORT = 5000
+
+MONGO_URI = mongodb+srv://prats1234:sreekutty@prats.hythk.mongodb.net/barewithme?retryWrites=true&w=majority
