git commit -m "auth, carousel,authmiddleware,order"

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ NODE_ENV = development
 PORT = 5000
 
 MONGO_URI = mongodb+srv://prats1234:sreekutty@prats.hythk.mongodb.net/barewithme?retryWrites=true&w=majority
+
+JWT_SECRET = "232abc"
+
+PAYPAL_CLIENT_ID = 
+ATI4HZ5RGNZiROdK6u1RI_n-Yncfmg_ZOMO6opEo0IKI4wdRMBYAYKsvzZOq8kniErAnaFIsg6CcIooS
