--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "barewithme",
   "version": "1.0.0",
-  "description": "Full stack ecommerce website",
+  "description": "Full Stack Web Application",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -10,9 +10,10 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "Pratibha",
+  "author": "Prats",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,10 +21,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "mongoose": "^5.11.15"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.6",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "react-helmet": "^6.1.0",
+    "react-paypal-button-v2": "^2.6.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.4"
   }
 }
